#pragma once

/**
 * @brief Enumeration of interface types that sensors can implement
 */
enum class InterfaceType {
    TEMPERATURE,
    HUMIDITY,
    CO2
};